QuizDown Episode 9
QuestionStore now has a count() method.

Made save() private in QuestionStore as create() now also does a save.

Updated Spring Boot version to 2.1.5 from 2.1.4